--- a/docker/bird/learn/Dockerfile
+++ b/docker/bird/learn/Dockerfile
@@ -16,5 +16,6 @@ RUN apt-get install -y libsndfile1
 RUN pip install seaborn
 RUN apt-get install -y ffmpeg
 RUN pip install noisereduce
+RUN pip install albumentations
 
 CMD ["python","-u","main_learn.py"]
