--- a/docker/bird/learn/Dockerfile
+++ b/docker/bird/learn/Dockerfile
@@ -18,4 +18,4 @@ RUN apt-get install -y ffmpeg
 RUN pip install noisereduce
 RUN pip install albumentations
 
-CMD ["python","-u","main_learn.py"]
+CMD ["python","-u","feature_extract.py"]
