--- a/python/torch/soundscapes/code/Dockerfile
+++ b/python/torch/soundscapes/code/Dockerfile
@@ -11,6 +11,7 @@ RUN pip install noisereduce
 RUN pip install albumentations
 RUN pip install audiomentations
 RUN pip install efficientnet_pytorch
+RUN pip install -U audio-metadata
 #RUN pip install torchaudio
 RUN mkdir /work
 COPY . /work
